--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
             text-align: center;
             margin: 30px;
             overflow: hidden;
+            user-select: none;
         }
 
         /* Pantalla de carga */
